--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Mostrando todos los avatars</h1>
+<% @avatars.each do |a| %>
+ <%= image_tag "#{a.url_image}" %>
+<% end%>
