--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -18,3 +18,6 @@
 
   <%= form.submit "Guardar" %>
 <% end %>
+
+<%= link_to 'Nuevo Item', new_item_path %>
+<%= link_to 'Ver todos los items', items_path %>
