--- a/app/views/items/index2.html.erb
+++ b/app/views/items/index2.html.erb
@@ -6,3 +6,6 @@
   <img src="<%= item.url_image %>" alt="Imagen">
   <hr>
 <% end %>
+
+<%= link_to 'Nuevo Item', new_item_path %>
+<%= link_to 'Ver todos los items', items_path %>
