--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -20,4 +20,4 @@
 <% end %>
 
 <%= link_to 'Nuevo Item', new_item_path %>
-<%= link_to 'Ver todos los items', items_path %>
+<%= link_to 'Ver todos los items', index2_item_path %>
